# nagaHitamMovie_streamlit_deploy

./: comment.py  comments.db  comments_db.py  darkmode.py  db.py  home.py  login.py  main.py  movies.db  pyproject.toml  recommend_ai.py  tmdb_fetch.py
.streamlit/: secrets.toml
apps/: ai.py  app.py
pages/: chatbot.py  details.py  genre.py  history.py  profile.py  watchlist.py
search/: search.py
search/pages/: details.py
